# context-wolf

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: cm_keywords.example.json
docs/: CLI_REFERENCE.md  MCP_TOOLS.md  USER_GUIDE.md
embedding_worker/: .env.example  .gitignore  __init__.py  cron_embed.sh  requirements.txt  setup.sh  worker.py
mcp_server/: __init__.py  mcp_context_server.py
migrations/: 001_initial_schema.sql  002_pinned.sql  002_promptstart.sql  003_pinned_scopes.sql  004_ai_instruction_priority_nice.sql  005_ai_instructions_check_constraints.sql  006_embedding_worker_runs.sql  007_now_items.sql  008_schema_reconciliation.sql
src/: __init__.py  __main__.py  version.py
src/cli/: handlers.py  parser.py  setup_commands.py
src/core/: __init__.py  config.py  database.py  embedding_health.py  helpers.py  migrator.py  sql_utils.py
src/core/backends/: __init__.py  base.py  postgresql.py
src/domain/: actions.py  duplicate_detection.py  search.py  session.py
src/features/: ai_instructions.py  ai_prompt.py  article_research.py  cleanup.py  git_integration.py  indexing.py  infrastructure.py  notes.py  now.py  pinned.py  smart_search.py  snippets.py  stats.py  test_management.py  test_reporting.py  test_runner.py  todos.py  token_tracking.py
tests/: claude_code_hook.py  test_duplicate_detection.py  test_git_integration.py  test_now.py  test_performance_v2.py  test_security_validation.py  test_token_tracking.py
