[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-wolf"
dynamic = ["version"]
description = "ContextWolf - A high-performance local knowledge system for Claude Code (MCP integration)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Peter Bernau", email = "info@darkwolfcave.de" },
]
keywords = ["mcp", "claude", "context", "knowledge-management", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML ~=6.0",
    "psycopg2-binary ~=2.9",
    "mcp ~=1.0",
]

[project.optional-dependencies]
embeddings = [
    "onnxruntime ~=1.20",
    "tokenizers ~=0.21",
    "numpy ~=2.0",
    "huggingface-hub ~=1.9",
]
dev = [
    "pytest ~=9.0",
    "pytest-cov ~=7.1",
]
# Install everything: pip install ".[all]"
all = [
    "context-wolf[embeddings,dev]",
]

[project.scripts]
cm = "src.__main__:main"
cm-mcp = "mcp_server.mcp_context_server:main"
cm-embed = "embedding_worker.worker:main"

[project.urls]
Homepage = "https://github.com/DarkWolfCave/context-wolf"
Repository = "https://github.com/DarkWolfCave/context-wolf"

[tool.hatch.version]
path = "src/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src", "mcp_server", "embedding_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
